--- a/catalog.html
+++ b/catalog.html
@@ -9,41 +9,51 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header-box">
-      <a class="logo" href="#">Техномарт</a>
-      <img src="img/icon-search.svg" width="15" height="15" alt="">
-      <form class="form-search">
-        <input class="search-field" type="search" placeholder="Поиск:">
-      </form>
-      <img src="img/icon-bookmark.svg" width="15" height="15" alt="">
-      <a class="button-bookmark" href="#">Закладки</a>
-      <img src="img/icon-cart.svg" width="15" height="15" alt="">
-      <a class="button-basket" href="#">Корзина</a>
-      <a button="button-checkout" href="#">Оформить заказ</a>
-    </div class="header-box">
-    <h1 class="headline">
-      Интернет-магазин
-      строительных материалов
-      и инструментов для ремонта
-    </h1>
-    <img src="img/icon-phone.svg" width="15" height="15" alt="">
-    <a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812) 555-05-55</a>
-    <address class="address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
-    <div>
-        <img src="img/icon-user.svg" width="15" height="15" alt="">
-        <a class="button-user" href="#">Равшан Джамшутович</a>
-        <img src="img/icon-logout.svg" width="15" height="15" alt="">
-    <ul class="button-users">
-      <li>
-        <a class="button-orders" href="#">Мои заказы</a>
-      </li>
-      <li>
-        <a class="button-personal" href="#">Личный кабинет</a>
-      </li>
-    </ul>
-  </div>
-    <nav>
+  <header class="main-header">
+    <div class="header-wrapper">
+      <div class="header-box">
+        <div class="logo-box">
+          <img class="logo" src="img/logo.png" width="109" height="19" alt="Логотип">
+        </div>
+        <img src="img/icon-search.svg" width="15" height="15" alt="">
+        <form class="form-search">
+          <input class="search-field" type="search" placeholder="Поиск:">
+        </form>
+        <img src="img/icon-bookmark.svg" width="15" height="15" alt="">
+        <a class="button-bookmark" href="#">Закладки</a>
+        <img src="img/icon-cart.svg" width="15" height="15" alt="">
+        <a class="button-basket" href="#">Корзина</a>
+        <a button="button-checkout" href="#">Оформить заказ</a>
+      </div>
+    </div>
+    <div class="header-middle">
+      <div class="hedline-box">
+        <h1 class="headline">
+          Интернет-магазин
+          строительных материалов
+          и инструментов для ремонта
+        </h1>
+      </div>
+      <div class="contacts-box">
+        <img src="img/icon-phone.svg" width="15" height="15" alt="">
+        <a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812) 555-05-55</a>
+        <address class="address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+      </div>
+      <div class="user-box">
+        <ul class="link-entrance">
+            <li>
+                <a class="user-name" href="#">Равшан Джамшутович</a>
+            </li>
+          <li>
+            <a class="user-item" href="#">Мои заказы</a>
+          </li>
+          <li>
+            <a class="user-item" href="#">Личный кабинет</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <nav class="main-nav">
       <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Компания</a></li>
@@ -54,80 +64,144 @@
         <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
       </ul>
     </nav>
-    </div>
   </header>
   <main>
-    <img src="img/icon-home.svg" width="15" height="15" alt="">
-    <a class="button-catalog" href="#">каталог</a>
-    <a class="button-instrumental" href="#">инструмент</a>
-    <a class="button-perforators" href="#">перфораторы</a>
-    <h2 class="perforators-headline">перфораторы</h2>
-    <div class="sorting">
-      <p class="text-sorting">Сортировка:</p>
-      <ul class="sorting-list">
-        <li class="sortin-item"><a class="button-prise" href="#">по цене</a></li>
-        <li class="sortin-item"><a class="button-type" href="#">по типу</a></li>
-        <li class="sortin-item"><a class="button-functional" href="#">по функционалу</a></li>
-      </ul>
-    </div>
-    <section class="perforator-catalog">
-      <article class="arcticle">
-        <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-        <h3 class="item-headline">Перфоратор BOSCH BFG 3000></h3>
-        <span class="price-discount">22500 Р.</span>
-        <span class="price">15500</span>
-        <button class="button-buy" type="button">купить</button>
-        <button class="add-bookmarks" type="button">в закладки</button>
-      </article>
 
-      <article class="arcticle">
-        <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-        <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
-        <span class="price-discount">30500 Р.</span>
-        <span class="price">25500</span>
-        <button class="button-buy" type="button">купить</button>
-        <button class="add-bookmarks" type="button">в закладки</button>
-      </article>
+    <div class="page-wrapper">
+<ul class="content-list">
+  <li><a class="content-item" href="#">каталог</a></li>
+  <li><a class="content-item" href="#">инструмент</a></li>
+  <li><a class="content-item" href="#">перфораторы</a></li>
+</ul>
+</div>
 
-      <article class="arcticle">
-        <img class="item-img" src="img/perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
-        <img src="img/newflag.png" width="60" height="59" alt="Новое">
-        <h3 class="item-headline">Перфоратор BOSCH BFG 2000 </h3>
-        <span class="price">12500</span>
-        <button class="button-buy" type="button">купить</button>
-        <button class="add-bookmarks" type="button">в закладки</button>
-      </article>
+    <div class="sorting-wrapper">
+      <h2 class="perforators-headline">перфораторы</h2>
+      <div class="sorting">
+        <ul class="sorting-list">
+          <li class="sorting-item filter-text"><p>Фильтр:</p></li>
+          <li class="sorting-item sorting-text"><p>Сортировка:</p> </li>
+          <li class="sorting-item prise-text"><a class="button-prise" href="#">по цене</a></li>
+          <li class="sorting-item type-text"><a class="button-type" href="#">по типу</a></li>
+          <li class="sorting-item"><a class="button-functional" href="#">по функционалу</a></li>
+          <li> <a class="order-increase" href="#"></a></li>
+          <li> <a class="order-decrease" href="#"></a></li>
+       </ul>
+      </div>
+    </div>
 
-      <ul class="page-list">
-        <li class="page-item"><a class="first-page" href="#" aria-label="Страница ">1</a></li>
-        <li class="page-item"><a class="second-page" href="#" aria-label="Страница ">2</a></li>
-        <li class="page-item"><a class="third-page" href="#" aria-label="Страница ">3</a></li>
-        <li class="page-item"><a class="next-page" href="#" aria-label="Cтраница">Следующая</a></li>
-      </ul>
-    </section>
-    <div class="filter">
-      <p class="filter-text">Фильтр:</p>
-      <p class="filter-prise">Цена:</p>
+
+
+    <div class="catalog-wrapper">
+      <section class="select-box">
+          <p class="filter-prise">Цена:</p>
+        <div class="manufacturers-filter">
+          <h2 class="manufacturers-headline">Производители:</h2>
+          <ul class="manufacturers-list">
+            <li class="manufacturers-select">bosh</li>
+            <li class="manufacturers-select">интерскол</li>
+            <li class="manufacturers-select">makita</li>
+            <li class="manufacturers-select">dewalt</li>
+            <li class="manufacturers-select">hitachi</li>
+          </ul>
+          <h2 class="power-headline">питание:</h2>
+          <ul class="power-list">
+            <li class="power-item">аккумуляторные</li>
+            <li class="power-item">сетевые</li>
+          </ul>
+          <button class="button-show" type="button">Показать</button>
+        </div>
+      </section>
+
+      <section class="perforator-catalog">
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
+          <p class="price-discount">22500 Р.</p>
+          <p class="price">15500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
+          <p class="price-discount">30500 Р.</p>
+          <p class="price">25500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 2000 </h3>
+          <p class="price">12500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
+          <p class="price-discount">22500 Р.</p>
+          <p class="price">15500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
+          <p class="price-discount">30500 Р.</p>
+          <p class="price">25500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 2000 </h3>
+          <p class="price">12500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
+          <p class="price-discount">22500 Р.</p>
+          <p class="price">15500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
+          <p class="price-discount">30500 Р.</p>
+          <p class="price">25500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+
+        <article class="arcticle">
+          <img class="item-img" src="img/perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+          <h3 class="item-headline">Перфоратор BOSCH BFG 2000 </h3>
+          <p class="price">12500 Р.</p>
+          <button class="button-buy" type="button">купить</button>
+          <button class="add-bookmarks" type="button">в закладки</button>
+        </article>
+      </section>
     </div>
-    <div class="price-controls">
-    </div>
-    </div>
-    <div class="manufacturers-filter">
-      <h2 class="manufacturers-headline">Производители:</h2>
-      <ul class="manufacturers-list">
-        <li class="manufacturers-item">bosh</li>
-        <li class="manufacturers-item">интерскол</li>
-        <li class="manufacturers-item">makita</li>
-        <li class="manufacturers-item">dewalt</li>
-        <li class="manufacturers-item">hitachi</li>
-      </ul>
-      <h2 class="power-headline">питание:</h2>
-      <ul class="power-list">
-        <li class="power-item">аккумуляторные</li>
-        <li class="power-item">сетевые</li>
-      </ul>
-      <button class="button-show" type="button">Показать</button>
-    </div>
+<div class="list-wrapper">
+    <ul class="page-list">
+      <li class="page-item"><a class="page-first" href="#" aria-label="Страница ">1</a></li>
+      <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">2</a></li>
+      <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">3</a></li>
+      <li class="page-item"><a class="page-number" >Следующая</a></li>
+    </ul>
+  </div>
+
     <section class="perforator-info">
       <p class="perforator-text">Пара слов о перфораторах</p>
       <p class="perforator-decryption">
@@ -147,26 +221,27 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="footer-data">
-      <a class="logo" href="#">Техномарт</a>
+    <div class="footer-up">
+      <a class="footer-logo" href="#">Техномарт</a>
       <address class="address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
-      <a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812) 555-05-55</a>
+      <div class="footer-nav">
+        <ul class="footer-list">
+          <li class="item-up"><a class="item-up" href="#">Компания</a></li>
+          <li class="item-up"><a class="item-up" href="#">Новости</a></li>
+          <li class="item-up"><a class="item-up" href="#">Каталог</a></li>
+          <li class="item-up"><a class="item-up" href="#">Доставка</a></li>
+          <li class="item-up"><a class="item-up" href="#">Контакты</a></li>
+        </ul>
+        <ul class="footer-list">
+          <li class="item-down"><a class="item-down" href="#">Материалы</a></li>
+          <li class="item-down"><a class="item-down" href="#">Техника</a></li>
+          <li class="item-down"><a class="item-down" href="#">Инструмент</a></li>
+          <li class="item-down"><a class="item-down" href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="footer-nav">
-      <ul class="footer-list">
-        <li class="item-up"><a class="item-up" href="#">Компания</a></li>
-        <li class="item-up"><a class="item-up" href="#">Новости</a></li>
-        <li class="item-up"><a class="item-up" href="#">Каталог</a></li>
-        <li class="item-up"><a class="item-up" href="#">Доставка</a></li>
-        <li class="item-up"><a class="item-up" href="#">Контакты</a></li>
-      </ul>
-      <ul class="footer-list">
-        <li class="item-down"><a class="item-down" href="#">Материалы</a></li>
-        <li class="item-down"><a class="item-down" href="#">Техника</a></li>
-        <li class="item-down"><a class="item-down" href="#">Инструмент</a></li>
-        <li class="item-down"><a class="item-down" href="#">Спецпредложения</a></li>
-      </ul>
-    </div>
+
+
     <div class="footer-down">
       <p class="copyright">
         © 2010-2016 Компания «Техномарт»
@@ -188,7 +263,6 @@
       </ul>
       <p class="feedback-text">Обратная связь:</p>
       <a class="button-mail" href="mailto:mail@htmlacademy.ru" aria-label="Обратная связь">mail@htmlacademy.ru</a>
-      </p>
       <p class="developed-text">Разработано-</p>
       <a class="button-developed" href="№" aria-label="Разработано">htmlacademy.ru</a>
     </div>
