--- a/catalog.html
+++ b/catalog.html
@@ -41,9 +41,9 @@
       </div>
       <div class="user-box">
         <ul class="link-entrance">
-            <li>
-                <a class="user-name" href="#">Равшан Джамшутович</a>
-            </li>
+          <li>
+            <a class="user-name" href="#">Равшан Джамшутович</a>
+          </li>
           <li>
             <a class="user-item" href="#">Мои заказы</a>
           </li>
@@ -68,25 +68,29 @@
   <main>
 
     <div class="page-wrapper">
-<ul class="content-list">
-  <li><a class="content-item" href="#">каталог</a></li>
-  <li><a class="content-item" href="#">инструмент</a></li>
-  <li><a class="content-item" href="#">перфораторы</a></li>
-</ul>
-</div>
+      <ul class="content-list">
+        <li><a class="content-item" href="#">каталог</a></li>
+        <li><a class="content-item" href="#">инструмент</a></li>
+        <li><a class="content-item" href="#">перфораторы</a></li>
+      </ul>
+    </div>
 
     <div class="sorting-wrapper">
       <h2 class="perforators-headline">перфораторы</h2>
       <div class="sorting">
         <ul class="sorting-list">
-          <li class="sorting-item filter-text"><p>Фильтр:</p></li>
-          <li class="sorting-item sorting-text"><p>Сортировка:</p> </li>
+          <li class="sorting-item filter-text">
+            <p>Фильтр:</p>
+          </li>
+          <li class="sorting-item sorting-text">
+            <p>Сортировка:</p>
+          </li>
           <li class="sorting-item prise-text"><a class="button-prise" href="#">по цене</a></li>
           <li class="sorting-item type-text"><a class="button-type" href="#">по типу</a></li>
           <li class="sorting-item"><a class="button-functional" href="#">по функционалу</a></li>
           <li> <a class="order-increase" href="#"></a></li>
           <li> <a class="order-decrease" href="#"></a></li>
-       </ul>
+        </ul>
       </div>
     </div>
 
@@ -94,7 +98,7 @@
 
     <div class="catalog-wrapper">
       <section class="select-box">
-          <p class="filter-prise">Цена:</p>
+        <p class="filter-prise">Цена:</p>
         <div class="manufacturers-filter">
           <h2 class="manufacturers-headline">Производители:</h2>
           <ul class="manufacturers-list">
@@ -193,14 +197,14 @@
         </article>
       </section>
     </div>
-<div class="list-wrapper">
-    <ul class="page-list">
-      <li class="page-item"><a class="page-first" href="#" aria-label="Страница ">1</a></li>
-      <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">2</a></li>
-      <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">3</a></li>
-      <li class="page-item"><a class="page-number" >Следующая</a></li>
-    </ul>
-  </div>
+    <div class="list-wrapper">
+      <ul class="page-list">
+        <li class="page-item"><a class="page-first" href="#" aria-label="Страница ">1</a></li>
+        <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">2</a></li>
+        <li class="page-item"><a class="page-number" href="#" aria-label="Страница ">3</a></li>
+        <li class="page-item"><a class="page-number">Следующая</a></li>
+      </ul>
+    </div>
 
     <section class="perforator-info">
       <p class="perforator-text">Пара слов о перфораторах</p>
