--- a/index.html
+++ b/index.html
@@ -12,47 +12,38 @@
   <header class="main-header">
     <div class="header-wrapper">
       <div class="header-box">
-        <div class="logo-box">
-          <img class="logo" src="img/logo.png" width="109" height="19" alt="Логотип">
-        </div>
-        <img src="img/icon-search.svg" width="15" height="15" alt="">
+   <a href="index.html" class="logo"> Техномарт</a>
         <form class="form-search">
           <input class="search-field" type="search" placeholder="Поиск:">
         </form>
-        <img src="img/icon-bookmark.svg" width="15" height="15" alt="">
-        <a class="button-bookmark" href="#">Закладки</a>
-        <img src="img/icon-cart.svg" width="15" height="15" alt="">
-        <a class="button-basket" href="#">Корзина</a>
-        <a button="button-checkout" href="#">Оформить заказ</a>
-      </div>
+  <a class="button-bookmark" href="#">Закладки</a></li>
+  <a class="button-basket" href="#">Корзина</a></li>
+  <a  class="button-checkout" href="#">Оформить заказ</a></li>
+ </div>
     </div>
     <div class="header-middle">
       <div class="hedline-box">
-        <h1 class="headline">
+        <p class="headline">
           Интернет-магазин
           строительных материалов
           и инструментов для ремонта
-        </h1>
+        </p>
       </div>
       <div class="contacts-box">
         <img src="img/icon-phone.svg" width="15" height="15" alt="">
         <a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812) 555-05-55</a>
         <address class="address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
       </div>
+      <div></div>
       <div class="user-box">
-        <ul class="link-entrance">
-          <li>
-            <img src="img/icon-login.svg" width="15" height="15" alt="">
-            <a class="item-login" href="#">Вход</a>
-          </li>
-          <li>
-            <a class="item-registration" href="#">Регистрация</a>
-          </li>
-        </ul>
+          <ul class="user-list">
+            <li class="user-item"><a class="item-login" href="#">Войти</a></li>
+            <li class="user-item"><a class="item-registration" href="#">Регистрация</a></li>
+          </ul>
       </div>
     </div>
     <nav class="main-nav">
-      <ul class="nav">
+      <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Компания</a></li>
         <li class="nav-item"><a class="nav-link" href="catalog.html">Каталог</a></li>
@@ -64,71 +55,71 @@
     </nav>
   </header>
   <main class="main">
-      <section class="benefits">
-        <div class="benefits-up">
-          <div class="signature-yellow signature-item">
-            <p class="signature-text">Материалы</p>
-            <a class="signature-down" href="#">На любой вкус</a>
-            <img src="img/icon-paint.svg" width="44" height="65" alt="">
+    <section class="benefits">
+      <div class="benefits-up">
+        <div class="signature-yellow signature-item">
+          <p class="signature-text">Материалы</p>
+          <a class="signature-down" href="#">На любой вкус</a>
+          <img src="img/icon-paint.svg" width="44" height="65" alt="">
+        </div>
+
+        <div class="signature-blue signature-item">
+          <p class="signature-text">Инструмент</p>
+          <a class="signature-down" href="#">На все случаи</a>
+          <img src="img/icon-drill.svg" width="44" height="65" alt="">
+        </div>
+
+        <div class="signature-pink signature-item">
+          <p class="signature-text">Техника</p>
+          <a class="signature-down" href="#">для стройки</a>
+          <img src="img/icon-tractor.svg" width="44" height="65" alt="">
+        </div>
+
+      </div>
+      <div class="benefits-down">
+        <ul class="slider">
+          <li>
+            <img class="slide-img" src="img/work-man.jpg" width="620" height="266" alt="">
+            <div>
+              <a class="slider-button" href="#">Открыть каталог</a>
+              <div class="slider-text">
+                <h4>
+                  Дрели
+                </h4>
+                <p>Соседями на радость!</p>
+              </div>
+            </div>
+          </li>
+          <li class="visually-hidden">
+            <img class="slide-img" src="img/work-man2.jpg" width="620" height="266" alt="">
+            <div class="slider-button">
+              <a href="#">Открыть каталог</a>
+              <div class="slider-text">
+                <h4>
+                  Перфораторы
+                </h4>
+                <p>Настоящие мужские игрушки!</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <div>
+
+          <div class="signature-green signature-item">
+            <p class="signature-text">Скидки 50%</p>
+            <a class="signature-down" href="#">На 350 товаров</a>
+            <img src="img/icon-big-cart.svg" width="44" height="65" alt="">
           </div>
 
-          <div class="signature-blue signature-item">
-            <p class="signature-text">Инструмент</p>
-            <a class="signature-down" href="#">На все случаи</a>
-            <img src="img/icon-drill.svg" width="44" height="65" alt="">
-          </div>
-
-          <div class="signature-pink signature-item">
-            <p class="signature-text">Техника</p>
-            <a class="signature-down" href="#">для стройки</a>
-            <img src="img/icon-tractor.svg" width="44" height="65" alt="">
+          <div class="signature-car signature-item">
+            <p class="signature-text">Доставка</p>
+            <a class="signature-down" href="#">Бесплатно</a>
+            <img src="img/icon-car.svg" width="44" height="65" alt="">
           </div>
 
         </div>
-        <div class="benefits-down">
-          <ul class="slider">
-            <li>
-              <img class="slide-img" src="img/work-man.jpg" width="620" height="266" alt="">
-              <div>
-                <a class="slider-button" href="#">Открыть каталог</a>
-                <div class="slider-text">
-                  <h4>
-                    Дрели
-                  </h4>
-                  <p>Соседями на радость!</p>
-                </div>
-              </div>
-            </li>
-            <li class="visually-hidden">
-              <img class="slide-img" src="img/work-man2.jpg" width="620" height="266" alt="">
-              <div class="slider-button">
-                <a href="#">Открыть каталог</a>
-                <div class="slider-text">
-                  <h4>
-                    Перфораторы
-                  </h4>
-                  <p>Настоящие мужские игрушки!</p>
-                </div>
-              </div>
-            </li>
-          </ul>
-          <div>
-
-            <div class="signature-green signature-item">
-              <p class="signature-text">Скидки 50%</p>
-              <a class="signature-down" href="#">На 350 товаров</a>
-              <img src="img/icon-big-cart.svg" width="44" height="65" alt="">
-            </div>
-
-            <div class="signature-car signature-item">
-              <p class="signature-text">Доставка</p>
-              <a class="signature-down" href="#">Бесплатно</a>
-              <img src="img/icon-car.svg" width="44" height="65" alt="">
-            </div>
-
-          </div>
-        </div>
-      </section>
+      </div>
+    </section>
     <section class="popular-goods">
       <div class="popular-wrapper">
         <h2 class="popular-headline">Популярные товары:</h2>
@@ -206,41 +197,41 @@
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
       </p>
       <div class="service-wrapper">
-    <ul class="service-buttons">
+        <ul class="service-buttons">
           <li class="button-service"><a href="#">Доставка</a></li>
           <li class="button-service"><a href="#">Гарантия</a></li>
           <li class="button-service"><a href="#">Кредит</a></li>
-    </ul>
-    <ul class="service-list">
-  <li class="service-text">
-        <h3 class="delivery-headline">Доставка</h3>
-        <p class="text-delivery">
-          Мы с удовольствием доставим ваш товар прямо
-          к вашему подъезду совершенно бесплатно!
-          ведь мы неплохо заработем,
-          поднимая его на ваш этаж!
-        </p>
-      </li>
+        </ul>
+        <ul class="service-list">
+          <li class="service-text">
+            <h3 class="delivery-headline">Доставка</h3>
+            <p class="text-delivery">
+              Мы с удовольствием доставим ваш товар прямо
+              к вашему подъезду совершенно бесплатно!
+              ведь мы неплохо заработем,
+              поднимая его на ваш этаж!
+            </p>
+          </li>
 
-      <li class="service-text visually-hidden">
-          <h3 class="delivery-headline">Гарантия</h3>
-          <p class="text-delivery">
-          Если купленный у нас товар поломается или заискрит,
-          а также в случае пожара, спровоцированного его возгоранием,
-          вы всегда можете быть уверены в нашей гарантии. Мы обменяем
-          сгоревший товар на новый.
-          Дом уж восстановите как-нибудь сами.
-          </p>
-        </li>
+          <li class="service-text visually-hidden">
+            <h3 class="delivery-headline">Гарантия</h3>
+            <p class="text-delivery">
+              Если купленный у нас товар поломается или заискрит,
+              а также в случае пожара, спровоцированного его возгоранием,
+              вы всегда можете быть уверены в нашей гарантии. Мы обменяем
+              сгоревший товар на новый.
+              Дом уж восстановите как-нибудь сами.
+            </p>
+          </li>
 
-        <li class="service-text visually-hidden">
+          <li class="service-text visually-hidden">
             <h3 class="delivery-headline">Кредит</h3>
             <p class="text-delivery">
               Залезть в долговую яму стало проще!
               Кредитные консультанты придут вам на помощь.
             </p>
           </li>
-         </ul>
+        </ul>
       </div>
     </section>
     <div class="About-flex">
